@@ -1,3 +1,9 @@
+2019-09-13  Niels Möller  <nisse@lysator.liu.se>
+
+	* tune/tuneup.c (one_method): New helper function, to measure
+	several functions for a fix size.
+	(tune_hgcd2, tune_div_qr_1, tune_mod_1, tune_jacobi_base): Use it.
+
 2019-09-05  Torbjörn Granlund  <tg@gmplib.org>
 
 	* mpn/arm64/gcd_22.asm: Rewrite to make better use of Arm conditional
